Update translation German
Translated with Weblate.

Currently translated at 100.0% (162 of 162 strings)

Co-authored-by: Sebastian Wiesner <sebastian@swsnr.de>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-09-11 05:49+0000\n"
+"PO-Revision-Date: 2025-09-11 06:14+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -490,9 +490,6 @@ msgid "Update wallpaper over metered network"
 msgstr "Hintergrundbild über getaktete Netzwerke aktualisieren"
 
 #: resources/ui/preferences-dialog.blp:50
-#, fuzzy
-#| msgctxt "preferences-dialog.group.title"
-#| msgid "Update after session is unlocked"
 msgctxt "preferences-dialog.group.title"
 msgid "Update wallpaper after session is unlocked"
 msgstr "Hintergrundbild nach Entsperren der Sitzung aktualisieren"
@@ -530,7 +527,7 @@ msgstr "Erneut prüfen"
 #: resources/ui/preferences-dialog.blp:99
 msgctxt "preferences-dialog.row.title"
 msgid "Command to permit access to logind"
-msgstr ""
+msgstr "Befehl um Zugriff auf logind zu erlauben"
 
 #: resources/ui/preferences-dialog.blp:108
 msgctxt "preferences-dialog.row.button.tooltip"
@@ -545,6 +542,11 @@ msgid ""
 "to add a permission for this application to talk to "
 "<tt>org.freedesktop.login1</tt> on the <i>System Bus</i>."
 msgstr ""
+"Führe diesen Befehl im Terminal aus, um Zugriff auf logind zu erlauben. "
+"Eventuell musst Du anschließend die Anwendung neu starten. Alternativ kannst "
+"Du <a href=\"https://flathub.org/en/apps/com.github.tchx84.Flatseal\""
+">Flatseal</a> benutzen, um dieser Anwendung die Berechtigung zu geben, mit "
+"<tt>org.freedesktop.login1</tt> auf dem <i>System Bus</i> zu reden."
 
 #: src/app.rs:122
 msgctxt "about-dialog.link.label"
