--- a/po/nl.po
+++ b/po/nl.po
@@ -7,22 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-08-14 09:09+0000\n"
+"PO-Revision-Date: 2025-09-12 17:09+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.12.2\n"
+"X-Generator: Weblate 5.13.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
 #: resources/ui/application-window.blp:10
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgid "Picture of the Day"
 msgstr "Afbeelding van de dag"
 
@@ -48,10 +46,10 @@ msgid "Whether to set the wallpaper automatically."
 msgstr "Of de achtergrond automatisch moet worden ingesteld."
 
 #: de.swsnr.pictureoftheday.gschema.xml:13
-#, fuzzy
-#| msgid "Whether to set the wallpaper automatically."
 msgid "Whether to update the wallpaper over metered networks."
-msgstr "Of de achtergrond automatisch moet worden ingesteld."
+msgstr ""
+"Of de achtergrond automatisch moet worden bijgewerkt op beperkte "
+"internetverbindingen."
 
 #: de.swsnr.pictureoftheday.gschema.xml:18
 msgid ""
@@ -146,10 +144,13 @@ msgid ""
 "Flathub. Instead, instruct the user to provide access to logind in the "
 "preferences dialog."
 msgstr ""
+"Er is geen toegang meer tot logind, daar dat nu verboden is op Flathub. In "
+"plaats daarvan wordt de gebruiker zelf om toegang gevraagd via de voorkeuren."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:53
 msgid "Optionally inhibit wallpaper updates over metered networks."
 msgstr ""
+"Optioneel: voorkom achtergrondwijzigingen op beperkte internetverbindingen."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:63
 msgid "Fix wallpaper updates."
@@ -299,9 +300,6 @@ msgid "Quit application"
 msgstr "Toepassing afsluiten"
 
 #: resources/gtk/help-overlay.blp:34
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Picture Of The Day Window"
 msgctxt "shortcuts group title"
 msgid "Picture of the Day Window"
 msgstr "Afbeelding van de dag-venster"
@@ -397,9 +395,6 @@ msgid "_Keyboard Shortcuts"
 msgstr "_Sneltoetsen"
 
 #: resources/ui/application-window.blp:151
-#, fuzzy
-#| msgctxt "main-window.menu.label"
-#| msgid "_About Picture Of The Day"
 msgctxt "main-window.menu.label"
 msgid "_About Picture of the Day"
 msgstr "Over _Afbeelding van de dag"
@@ -455,68 +450,58 @@ msgid "Downloading image…"
 msgstr "Bezig met ophalen…"
 
 #: resources/ui/preferences-dialog.blp:12
-#, fuzzy
-#| msgid "Wallpaper"
 msgctxt "preferences-dialog.page.title"
 msgid "Wallpaper sources"
-msgstr "Achtergrond"
+msgstr "Achtergrondbronnen"
 
 #: resources/ui/preferences-dialog.blp:16
 msgid "API key"
 msgstr "Api-sleutel"
 
 #: resources/ui/preferences-dialog.blp:21
-#, fuzzy
-#| msgid "Get API key"
 msgctxt "preferences-dialog.row.link-label"
 msgid "Get API key"
 msgstr "Api-sleutel ophalen"
 
 #: resources/ui/preferences-dialog.blp:29
-#, fuzzy
-#| msgid "Enabled collections"
 msgctxt "preferences-dialog.row.title"
 msgid "Enabled collections"
 msgstr "Ingeschakelde collecties"
 
 #: resources/ui/preferences-dialog.blp:38
-#, fuzzy
-#| msgid "Fix wallpaper updates."
 msgctxt "preferences-dialog.page.title"
 msgid "Daily wallpaper update"
-msgstr "Opgelost: bijwerken van achtergronden."
+msgstr "Dagelijks bijwerken"
 
 #: resources/ui/preferences-dialog.blp:41
-#, fuzzy
-#| msgid "Artwork"
 msgctxt "preferences-dialog.group.title"
 msgid "Network"
-msgstr "Kunst"
+msgstr "Netwerk"
 
 #: resources/ui/preferences-dialog.blp:44
 msgctxt "preferences-dialog.row.title"
 msgid "Update wallpaper over metered network"
-msgstr ""
+msgstr "Achtergrond wĳzigen op beperkte internetverbindingen"
 
 #: resources/ui/preferences-dialog.blp:50
 msgctxt "preferences-dialog.group.title"
 msgid "Update wallpaper after session is unlocked"
-msgstr ""
+msgstr "Achtergrond wĳzigen na ontgrendelen van sessie"
 
 #: resources/ui/preferences-dialog.blp:53
 msgctxt "preferences-dialog.row.title"
 msgid "Connection to logind allowed"
-msgstr ""
+msgstr "Verbinding met logind toegestaan"
 
 #: resources/ui/preferences-dialog.blp:54
 msgctxt "preferences-dialog.row.description"
 msgid "After the session is unlocked the wallpaper is updated immediately."
-msgstr ""
+msgstr "De achtergrond wordt bijgewerkt zodra de sessie ontgrendeld is."
 
 #: resources/ui/preferences-dialog.blp:68
 msgctxt "preferences-dialog.row.title"
 msgid "Connection to logind prohibited"
-msgstr ""
+msgstr "Verbinding met logind geweigerd"
 
 #: resources/ui/preferences-dialog.blp:69
 msgctxt "preferences-dialog.row.description"
@@ -524,21 +509,23 @@ msgid ""
 "After the session is unlocked the wallpaper is updated only after a "
 "considerable delay."
 msgstr ""
+"De achtergrond wordt bijgewerkt nadat de sessie is ontgrendeld, maar wel pas "
+"na enige tijd."
 
 #: resources/ui/preferences-dialog.blp:87
 msgctxt "preferences-dialog.row.button.tooltip"
 msgid "Check again"
-msgstr ""
+msgstr "Opnieuw controleren"
 
 #: resources/ui/preferences-dialog.blp:99
 msgctxt "preferences-dialog.row.title"
 msgid "Command to permit access to logind"
-msgstr ""
+msgstr "Opdracht om toegang tot logind toe te staan"
 
 #: resources/ui/preferences-dialog.blp:108
 msgctxt "preferences-dialog.row.button.tooltip"
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Kopiëren naar klembord"
 
 #: resources/ui/preferences-dialog.blp:123
 msgid ""
@@ -548,6 +535,11 @@ msgid ""
 "to add a permission for this application to talk to "
 "<tt>org.freedesktop.login1</tt> on the <i>System Bus</i>."
 msgstr ""
+"Voer deze opdracht uit in een terminalvenster om toegang tot logind te "
+"geven. Herstart nadien de toepassing. Als alternatief kan <a href="
+"\"https://flathub.org/nl/apps/com.github.tchx84.Flatseal\">Flatseal</a> "
+"worden gebruikt om toegang tot <tt>org.freedesktop.login1</tt> op de "
+"<i>systeembus</i> te geven."
 
 #: src/app.rs:122
 msgctxt "about-dialog.link.label"
@@ -584,9 +576,6 @@ msgid "Turn on devices in your network"
 msgstr "Uw dagelijkse achtergrond"
 
 #: src/app.rs:194
-#, fuzzy
-#| msgctxt "notification.title"
-#| msgid "Picture Of The Day updated"
 msgctxt "notification.title"
 msgid "Picture of the Day updated"
 msgstr "Afbeelding van de dag bijgewerkt"
@@ -602,13 +591,6 @@ msgid "Restart after update?"
 msgstr "Herstarten na bijwerken?"
 
 #: src/app.rs:216
-#, fuzzy
-#| msgctxt "alert-dialog.body"
-#| msgid ""
-#| "Picture Of The Day was updated, and needs to be restarted.\n"
-#| "\n"
-#| "Automatic restarting is not yet supported, but you can quit the app and "
-#| "start it again manually."
 msgctxt "alert-dialog.body"
 msgid ""
 "Picture of the Day was updated, and needs to be restarted.\n"
@@ -668,9 +650,6 @@ msgid "Automatically fetch and set wallpaper in background"
 msgstr "Haal de achtergrond automatisch op en stel deze in"
 
 #: src/app/model/error_notification.rs:42
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Picture Of The Day needs an API key"
 msgctxt "error-notification.title"
 msgid "Picture of the Day needs an API key"
 msgstr "Api-sleutel vereist"
@@ -685,9 +664,6 @@ msgstr ""
 "sleutel lijkt onbruikbaar te zijn."
 
 #: src/app/model/error_notification.rs:66
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Picture Of The Day was rate-limited"
 msgctxt "error-notification.title"
 msgid "Picture of the Day was rate-limited"
 msgstr "Gebruiksbeperking"
@@ -975,8 +951,6 @@ msgid "Unknown, all rights reserved"
 msgstr "Onbekend - alle rechten voorbehouden"
 
 #: src/main.rs:72
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "application-name"
 msgid "Picture of the Day"
 msgstr "Afbeelding van de dag"
