--- a/po/et.po
+++ b/po/et.po
@@ -7,22 +7,20 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-08-14 09:09+0000\n"
+"PO-Revision-Date: 2025-09-12 17:09+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.12.2\n"
+"X-Generator: Weblate 5.13.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
 #: resources/ui/application-window.blp:10
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgid "Picture of the Day"
 msgstr "Päevapilt"
 
@@ -48,10 +46,8 @@ msgid "Whether to set the wallpaper automatically."
 msgstr "Kas valime taustapildid automaatselt."
 
 #: de.swsnr.pictureoftheday.gschema.xml:13
-#, fuzzy
-#| msgid "Whether to set the wallpaper automatically."
 msgid "Whether to update the wallpaper over metered networks."
-msgstr "Kas valime taustapildid automaatselt."
+msgstr "Kas taustapildi uuendamine toimib ka mahupiiranguga võrkudes."
 
 #: de.swsnr.pictureoftheday.gschema.xml:18
 msgid ""
@@ -148,10 +144,13 @@ msgid ""
 "Flathub. Instead, instruct the user to provide access to logind in the "
 "preferences dialog."
 msgstr ""
+"Vastavalt Flathubi muutunud reeglitele logind taustateenuse õiguste "
+"automaatne lisamine enam ei toimi ja nüüd peab kasutaja seda Eelistuste "
+"vaatest ise määrama."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:53
 msgid "Optionally inhibit wallpaper updates over metered networks."
-msgstr ""
+msgstr "Võimalus keelata taustapiltide uuendamine mahupiiranguga võrkudes."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:63
 msgid "Fix wallpaper updates."
@@ -302,9 +301,6 @@ msgid "Quit application"
 msgstr "Sulge rakendus"
 
 #: resources/gtk/help-overlay.blp:34
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Picture Of The Day Window"
 msgctxt "shortcuts group title"
 msgid "Picture of the Day Window"
 msgstr "Päevapildi aken"
@@ -400,9 +396,6 @@ msgid "_Keyboard Shortcuts"
 msgstr "_Klaviatuuri kiirklahvid"
 
 #: resources/ui/application-window.blp:151
-#, fuzzy
-#| msgctxt "main-window.menu.label"
-#| msgid "_About Picture Of The Day"
 msgctxt "main-window.menu.label"
 msgid "_About Picture of the Day"
 msgstr "_Rakenduse teave: Päevapilt"
@@ -458,68 +451,58 @@ msgid "Downloading image…"
 msgstr "Pilt on allalaadimisel…"
 
 #: resources/ui/preferences-dialog.blp:12
-#, fuzzy
-#| msgid "Wallpaper"
 msgctxt "preferences-dialog.page.title"
 msgid "Wallpaper sources"
-msgstr "Taustapilt"
+msgstr "Taustapiltide allikad"
 
 #: resources/ui/preferences-dialog.blp:16
 msgid "API key"
 msgstr "API-võti"
 
 #: resources/ui/preferences-dialog.blp:21
-#, fuzzy
-#| msgid "Get API key"
 msgctxt "preferences-dialog.row.link-label"
 msgid "Get API key"
 msgstr "Tee oma API võti"
 
 #: resources/ui/preferences-dialog.blp:29
-#, fuzzy
-#| msgid "Enabled collections"
 msgctxt "preferences-dialog.row.title"
 msgid "Enabled collections"
 msgstr "Kasutusel kogumikud"
 
 #: resources/ui/preferences-dialog.blp:38
-#, fuzzy
-#| msgid "Fix wallpaper updates."
 msgctxt "preferences-dialog.page.title"
 msgid "Daily wallpaper update"
-msgstr "Taustapiltide uuendamise parandused."
+msgstr "Taustapiltide igapäevane uuendamine"
 
 #: resources/ui/preferences-dialog.blp:41
-#, fuzzy
-#| msgid "Artwork"
 msgctxt "preferences-dialog.group.title"
 msgid "Network"
-msgstr "Kunst"
+msgstr "Võrgundus"
 
 #: resources/ui/preferences-dialog.blp:44
 msgctxt "preferences-dialog.row.title"
 msgid "Update wallpaper over metered network"
-msgstr ""
+msgstr "Uuenda taustapilti mahupiiranguga võrkudes"
 
 #: resources/ui/preferences-dialog.blp:50
 msgctxt "preferences-dialog.group.title"
 msgid "Update wallpaper after session is unlocked"
-msgstr ""
+msgstr "Uuenda päevapilte ka pärast sessiooni lukustumist"
 
 #: resources/ui/preferences-dialog.blp:53
 msgctxt "preferences-dialog.row.title"
 msgid "Connection to logind allowed"
-msgstr ""
+msgstr "Logind ühendus on lubatud"
 
 #: resources/ui/preferences-dialog.blp:54
 msgctxt "preferences-dialog.row.description"
 msgid "After the session is unlocked the wallpaper is updated immediately."
-msgstr ""
+msgstr "Päevapilt uuendatakse kohe peale sessiooni lukustuse lõpetamist."
 
 #: resources/ui/preferences-dialog.blp:68
 msgctxt "preferences-dialog.row.title"
 msgid "Connection to logind prohibited"
-msgstr ""
+msgstr "Logind ühendus on keelatud"
 
 #: resources/ui/preferences-dialog.blp:69
 msgctxt "preferences-dialog.row.description"
@@ -527,21 +510,23 @@ msgid ""
 "After the session is unlocked the wallpaper is updated only after a "
 "considerable delay."
 msgstr ""
+"Päevapilt uuendatakse märgatava aja möödumisel peale sessiooni lukustuse "
+"lõpetamist."
 
 #: resources/ui/preferences-dialog.blp:87
 msgctxt "preferences-dialog.row.button.tooltip"
 msgid "Check again"
-msgstr ""
+msgstr "Kontrolli uuesti"
 
 #: resources/ui/preferences-dialog.blp:99
 msgctxt "preferences-dialog.row.title"
 msgid "Command to permit access to logind"
-msgstr ""
+msgstr "Käsk, mis lubab logind kasutamise"
 
 #: resources/ui/preferences-dialog.blp:108
 msgctxt "preferences-dialog.row.button.tooltip"
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Kopeeri lõikelauale"
 
 #: resources/ui/preferences-dialog.blp:123
 msgid ""
@@ -551,6 +536,12 @@ msgid ""
 "to add a permission for this application to talk to "
 "<tt>org.freedesktop.login1</tt> on the <i>System Bus</i>."
 msgstr ""
+"Kui soovid lubada logind kasutamist, siis käivita see käsk terminalis ja "
+"taaskäivita rakendus. Alternatiivina võid sama õiguse lubamiseks kasutada "
+"haldusrakendust <a href="
+"\"https://flathub.org/en/apps/com.github.tchx84.Flatseal\">Flatseal</a>. "
+"Selle tulemusena võib Päevapilt teha <i>süsteemisiini (System Bus)</i> abil "
+"päringud teenusele <tt>org.freedesktop.login1</tt>."
 
 #: src/app.rs:122
 msgctxt "about-dialog.link.label"
@@ -587,9 +578,6 @@ msgid "Turn on devices in your network"
 msgstr "Lülita seadmed oma võrgus sisse"
 
 #: src/app.rs:194
-#, fuzzy
-#| msgctxt "notification.title"
-#| msgid "Picture Of The Day updated"
 msgctxt "notification.title"
 msgid "Picture of the Day updated"
 msgstr "Päevapilt on uuendatud"
@@ -605,13 +593,6 @@ msgid "Restart after update?"
 msgstr "Kas taaskäivitame rakenduse peale uuendust?"
 
 #: src/app.rs:216
-#, fuzzy
-#| msgctxt "alert-dialog.body"
-#| msgid ""
-#| "Picture Of The Day was updated, and needs to be restarted.\n"
-#| "\n"
-#| "Automatic restarting is not yet supported, but you can quit the app and "
-#| "start it again manually."
 msgctxt "alert-dialog.body"
 msgid ""
 "Picture of the Day was updated, and needs to be restarted.\n"
@@ -621,7 +602,7 @@ msgid ""
 msgstr ""
 "Päevapilt on uuendatud ja vajab taaskäivitust.\n"
 "\n"
-"Automaatne taaskäivitus pole veel toetatud, aga sa saad rakenduse sulged ja "
+"Automaatne taaskäivitus pole veel toetatud, aga sa saad rakenduse sulgeda ja "
 "ise uuesti tööle panna."
 
 #: src/app.rs:225
@@ -670,9 +651,6 @@ msgid "Automatically fetch and set wallpaper in background"
 msgstr "Laadi ja lisa taustapilt automaatselt"
 
 #: src/app/model/error_notification.rs:42
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Picture Of The Day needs an API key"
 msgctxt "error-notification.title"
 msgid "Picture of the Day needs an API key"
 msgstr "Päevapilt vajab API võtit"
@@ -687,12 +665,9 @@ msgstr ""
 "Tundub, et praegune võti enam ei kehti."
 
 #: src/app/model/error_notification.rs:66
-#, fuzzy
-#| msgctxt "error-notification.title"
-#| msgid "Picture Of The Day was rate-limited"
 msgctxt "error-notification.title"
 msgid "Picture of the Day was rate-limited"
-msgstr "Rakendusele Päevapilt rakendus päringute mahupiirang"
+msgstr "Rakendusele Päevapilt kehtib päringute mahupiirang"
 
 #: src/app/model/error_notification.rs:72
 msgctxt "error-notification.description"
@@ -975,8 +950,6 @@ msgid "Unknown, all rights reserved"
 msgstr "Teadmata autor, kõik õigused kaitstud"
 
 #: src/main.rs:72
-#, fuzzy
-#| msgid "Picture Of The Day"
 msgctxt "application-name"
 msgid "Picture of the Day"
 msgstr "Päevapilt"
