--- a/po/de.po
+++ b/po/de.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-09-11 06:14+0000\n"
+"PO-Revision-Date: 2025-09-24 20:07+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.12.2\n"
+"X-Generator: Weblate 5.13.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -139,10 +139,8 @@ msgid "Artwork"
 msgstr "Kunstwerk"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
-#, fuzzy
-#| msgid "Update to GNOME 48."
 msgid "Update to GNOME 49."
-msgstr "Die Anwendung wurde auf GNOME 48 aktualisiert."
+msgstr "Aktualisiert auf GNOME 49."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:55
 msgid ""
@@ -292,9 +290,6 @@ msgid "The empty greeting page with the application icon"
 msgstr "Die leere Startseite mit dem Anwendungssymbol"
 
 #: resources/shortcuts-dialog.blp:11
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Picture of the Day Window"
 msgctxt "shortcuts section title"
 msgid "Picture of the Day Window"
 msgstr "Bild des Tages Fenster"
@@ -320,9 +315,6 @@ msgid "Toggle sidebar"
 msgstr "Seitenleiste umschalten"
 
 #: resources/shortcuts-dialog.blp:39
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Navigate images"
 msgctxt "shortcuts section title"
 msgid "Navigate images"
 msgstr "Zwischen Bildern springen"
@@ -338,9 +330,6 @@ msgid "Next image"
 msgstr "Nächstes Bild"
 
 #: resources/shortcuts-dialog.blp:65
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "General"
 msgctxt "shortcuts section title"
 msgid "General"
 msgstr "Allgemein"
