--- a/po/nl.po
+++ b/po/nl.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-09-12 17:09+0000\n"
+"PO-Revision-Date: 2025-09-26 12:09+0000\n"
 "Last-Translator: Vistaus <vistaus@noreply.codeberg.org>\n"
-"Language-Team: Dutch <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
+"Language-Team: Dutch <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,10 +139,8 @@ msgid "Artwork"
 msgstr "Kunst"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:49
-#, fuzzy
-#| msgid "Update to GNOME 48."
 msgid "Update to GNOME 49."
-msgstr "Bijgewerkt: GNOME-versie naar 48."
+msgstr "Bijgewerkt: GNOME-versie naar 49."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:55
 msgid ""
@@ -286,9 +284,6 @@ msgid "The empty greeting page with the application icon"
 msgstr "Welkomstscherm met toepassingspictogram"
 
 #: resources/shortcuts-dialog.blp:11
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Picture of the Day Window"
 msgctxt "shortcuts section title"
 msgid "Picture of the Day Window"
 msgstr "Afbeelding van de dag-venster"
@@ -314,9 +309,6 @@ msgid "Toggle sidebar"
 msgstr "Zijbalk tonen/verbergen"
 
 #: resources/shortcuts-dialog.blp:39
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "Navigate images"
 msgctxt "shortcuts section title"
 msgid "Navigate images"
 msgstr "Vorige/Volgende afbeelding"
@@ -332,9 +324,6 @@ msgid "Next image"
 msgstr "Volgende afbeelding"
 
 #: resources/shortcuts-dialog.blp:65
-#, fuzzy
-#| msgctxt "shortcuts group title"
-#| msgid "General"
 msgctxt "shortcuts section title"
 msgid "General"
 msgstr "Algemeen"
