--- a/po/et.po
+++ b/po/et.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-09-26 12:09+0000\n"
+"PO-Revision-Date: 2025-10-23 11:05+0000\n"
 "Last-Translator: Priit Jõerüüt <jrtcdbrg@noreply.codeberg.org>\n"
-"Language-Team: Estonian <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
+"Language-Team: Estonian <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/et/>\n"
 "Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.13.2\n"
+"X-Generator: Weblate 5.13.3\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -137,6 +137,8 @@ msgstr "Kunst"
 #: de.swsnr.pictureoftheday.metainfo.xml:48
 msgid "Remove EPOD source, as it appears to be offline since October 2025."
 msgstr ""
+"Kuna alates oktoobrist 2025 teenus ei tundu toimima, siis EPOD on teenuste "
+"loendist eemaldatud."
 
 #: de.swsnr.pictureoftheday.metainfo.xml:54
 msgid "Update to GNOME 49."
