--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -7,17 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.pictureoftheday\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-09-26 12:09+0000\n"
+"PO-Revision-Date: 2025-10-26 03:09+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
 "Language-Team: Chinese (Simplified Han script) <https://"
-"translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-"
-"pictureoftheday/zh_Hans/>\n"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
+"de-swsnr-pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 5.13.2\n"
+"X-Generator: Weblate 5.13.3\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -130,7 +130,7 @@ msgstr "作品"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:48
 msgid "Remove EPOD source, as it appears to be offline since October 2025."
-msgstr ""
+msgstr "移除 EPOD 源，该源自 2025 年 10 月起处于离线状态。"
 
 #: de.swsnr.pictureoftheday.metainfo.xml:54
 msgid "Update to GNOME 49."
